# local-reranker

./: README.md  pyproject.toml
.windsurf/: memory-index.md
.windsurf/core/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.windsurf/plans/: initial-project-plan.md
.windsurf/task-logs/: task-log_2025-04-15-13-11_memory-bank-initialization.md  task-log_2025-04-15-13-52_testing-setup-deps-debug.md  task-log_2025-04-15-15-03_memory-updates.md
specs/: prd.md
src/local_reranker/: api.py  reranker.py
tests/: test_api.py  test_integration.py
