[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-reranker"
version = "0.0.1" # Initial version, sync with __init__.py
authors = [
  { name="Your Name", email="you@example.com" }, # Placeholder - USER should update
]
description = "A lightweight, local reranker API implementation compatible with Jina."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Assuming MIT from LICENSE file
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

keywords = ["reranker", "local", "jina", "api", "rag", "nlp", "machine learning"]

dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "pydantic>=2.0,<3.0",
    "sentence-transformers>=2.6.0,<2.7.0",
    "accelerate>=0.28.0,<0.29.0",
] # Can be read from requirements.txt too, duplication for build tools

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0", # Required by FastAPI TestClient
]

[project.urls]
"Homepage" = "https://github.com/user/local-reranker" # Placeholder - USER should update
"Bug Tracker" = "https://github.com/user/local-reranker/issues" # Placeholder - USER should update

[project.scripts]
# Example: local-reranker-server = "local_reranker.cli:main"
